--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <button onclick="showQuote()">Random Quote</button>
       <button onclick="showRiddle()">Riddle me</button>
       <button class="reveal-btn" onclick="revealAnswers()">Reveal Riddle Answer</button>
-      <button onclick="clearAll()">Clear!</button>
+      <button onclick="clearAll2()">Clear!</button>
       <p class="attribution">Code challenge by <a href="https://twitter.com/zg_dev" target="_top">@zg_dev</a></p>
     </section>
   </main>
